| Bug #31538 | Backup file is too large. | ||
|---|---|---|---|
| Submitted: | 11 Oct 2007 15:36 | Modified: | 26 Feb 2008 0:41 |
| Reporter: | Chuck Bell | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S2 (Serious) |
| Version: | 5.2 | OS: | Any |
| Assigned to: | Chuck Bell | Target Version: | |
| Triage: | D3 (Medium) | ||
[11 Oct 2007 15:36]
Chuck Bell
[11 Oct 2007 15:39]
Chuck Bell
Solution found. Minor mods to rpl_record::unpack needed.
[11 Oct 2007 21:42]
Chuck Bell
Patch ready for review. http://lists.mysql.com/commits/35421
[25 Oct 2007 13:49]
Chuck Bell
Submitted a second patch for review. See http://lists.mysql.com/commits/36305
[29 Oct 2007 8:45]
Rafal Somla
Good to push.
[1 Nov 2007 19:54]
Chuck Bell
Patch relies on another patch (WL#3324) but will be pushed on 6 November.
[25 Feb 2008 20:19]
Bugs System
Pushed into 6.0.5-alpha
[26 Feb 2008 0:41]
Paul DuBois
Noted in 6.0.5 changelog. Output for Online Backup was too large, in some cases up to 20 times larger than the raw data files for some storage engines.
[14 Mar 2008 1:30]
Paul DuBois
Correction: No changelog entry needed; this bug did not appear in any released version.
