BUG#31538 Backup file is too large.

This patch alters the internal row format of the default and consistent snapshot driver to use
the same format as that of the binary log (RBR).